imágenes de galerías
subidas en calidad web

--- a/secciones/contacto/index.html
+++ b/secciones/contacto/index.html
@@ -63,12 +63,13 @@
     <br>
 
     <div class="d-flex justify-content-center">
-        <div class="container"> 
+        <div id="container-contacto" class="container"> 
             <div class="row">
                 <div class="col-12">
                     <p class="contacto"> 
-                        Si estás interesado/a en mi trabajo, sentite libre de contactarme por donde quieras!
+                      Si estás interesado/a en mi trabajo, tenés alguna consulta o querés pedir un presupuesto, sentite libre de contactarme por cualquiera de estos medios.  
                     </p>
+                    
                     <div class="container">
                       <div class="row">
                         <div class="col-6 d-flex justify-content-center" style="color: #FFF;">
