--- a/secciones/portfolio/teatro/index.html
+++ b/secciones/portfolio/teatro/index.html
@@ -65,7 +65,7 @@
             <div class="col">
             <div class="card">
                 <a href="biodrag/index.html">
-                    <img src="https://i.ibb.co/FHf6mFX/biodrag2.jpg" alt="Biodrag" class="card-img-top">
+                    <img src="" alt="Biodrag" class="card-img-top">
                 </a>
                 <div class="card-body" style="background-color: #783172; opacity: 65%;">
                     <h5 class="card-title">Biodrag</h5>
@@ -75,7 +75,7 @@
             <div class="col">
             <div class="card">
                 <a href="canta/index.html">
-                    <img src="https://i.ibb.co/wsgcSXF/canta-caratula.jpg" alt="De eso no se canta" class="card-img-top">
+                    <img src="https://i.ibb.co/4gbtz0N/canta-caratula.jpg" alt="De eso no se canta" class="card-img-top">
                 </a>
                 <div class="card-body" style="background-color: #783172; opacity: 65%;">
                     <h5 class="card-title">De eso no se canta</h5>
@@ -85,7 +85,7 @@
             <div class="col">
             <div class="card">
                 <a href="partida/index.html">
-                    <img src="https://i.ibb.co/2Nc5W0Q/partida-caratula.jpg" alt="De pronto tu partida" class="card-img-top">
+                    <img src="https://i.ibb.co/F61VvWf/CARATULA-GALERIA-IPH-0446.jpg" alt="De pronto tu partida" class="card-img-top">
                 </a>
                 <div class="card-body" style="background-color: #783172; opacity: 65%;">
                     <h5 class="card-title">De pronto tu partida</h5>
@@ -95,7 +95,7 @@
             <div class="col">
                 <div class="card">
                     <a href="jorobado/index.html">
-                        <img src="https://i.ibb.co/Jk19Ksx/jorobado-caratula.jpg" alt="El Jorobado de París" class="card-img-top">
+                        <img src="https://i.ibb.co/92NQKhf/jorobado-caratula.jpg" alt="El Jorobado de París" class="card-img-top">
                     </a>
                     <div class="card-body" style="background-color: #783172; opacity: 65%;">
                         <h5 class="card-title">El Jorobado de París</h5>
@@ -105,7 +105,7 @@
             <div class="col">
                 <div class="card">
                     <a href="miserables/index.html">
-                        <img src="https://i.ibb.co/xHNqmFd/miserables-caratula.jpg" alt="Los Miserables" class="card-img-top">
+                        <img src="https://i.ibb.co/RTS2QWZ/miserables-caratula.jpg" alt="Los Miserables" class="card-img-top">
                     </a>
                     <div class="card-body" style="background-color: #783172; opacity: 65%;">
                         <h5 class="card-title">Los Miserables</h5>
@@ -115,7 +115,7 @@
             <div class="col">
                 <div class="card">
                     <a href="palabras/index.html">
-                        <img src="https://i.ibb.co/R3JcWsD/palabras-caratula.jpg" alt="Palabras" class="card-img-top">
+                        <img src="https://i.ibb.co/M8x2nkF/palabras-caratula.jpg" alt="Palabras" class="card-img-top">
                     </a>
                     <div class="card-body" style="background-color: #783172; opacity: 65%;">
                         <h5 class="card-title">Soy mucho más que palabras</h5>
@@ -125,7 +125,7 @@
             <div class="col">
                 <div class="card">
                     <a href="aisa/index.html">
-                        <img src="https://i.ibb.co/6Ywm1vs/aisa-caratula.jpg" alt="Noche con Aisa" class="card-img-top">
+                        <img src="https://i.ibb.co/R7WqLnw/aisa-caratula.jpg" alt="Noche con Aisa" class="card-img-top">
                     </a>
                     <div class="card-body" style="background-color: #783172; opacity: 65%;">
                         <h5 class="card-title">Noche con Aisa</h5>
@@ -135,7 +135,7 @@
             <div class="col">
                 <div class="card">
                     <a href="lucy/index.html">
-                        <img src="https://i.ibb.co/vxK9g38/lucy-caratula.jpg" alt="Lucy" class="card-img-top">
+                        <img src="https://i.ibb.co/S5h424Z/lucy-caratula.jpg" alt="Lucy" class="card-img-top">
                     </a>
                     <div class="card-body" style="background-color: #783172; opacity: 65%;">
                         <h5 class="card-title">Lucy en el cielo con piedras</h5>
@@ -145,7 +145,7 @@
             <div class="col">
                 <div class="card">
                     <a href="premortem/index.html">
-                        <img src="https://i.ibb.co/tstGV3M/premortem-caratula.jpg" alt="Pre-mortem" class="card-img-top">
+                        <img src="https://i.ibb.co/3T9TDyy/premortem-caratula.jpg" alt="Pre-mortem" class="card-img-top">
                     </a>
                     <div class="card-body" style="background-color: #783172; opacity: 65%;">
                         <h5 class="card-title">Pre-mortem</h5>
@@ -155,7 +155,7 @@
             <div class="col">
                 <div class="card">
                     <a href="gala/index.html">
-                        <img src="https://i.ibb.co/r3Cwc46/gala-caratula.jpg" alt="Gala a benenficio" class="card-img-top">
+                        <img src="https://i.ibb.co/xJtgB3N/gala-caratula.jpg" alt="Gala a benenficio" class="card-img-top">
                     </a>
                     <div class="card-body" style="background-color: #783172; opacity: 65%;">
                         <h5 class="card-title">Gala a benenficio de la Casa del Teatro</h5>
