--- a/secciones/portfolio/teatro/lucy/index.html
+++ b/secciones/portfolio/teatro/lucy/index.html
@@ -67,47 +67,48 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/3kX8CqT/lucy1.jpg"   > </a>
+              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/FHmMSSd/lucy1.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/0t5ymmC/lucy2.jpg"   > </a>
+              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/CMwDQmv/lucy2.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/Sm3G0cf/lucy3.jpg"   > </a>
+              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/9bJhVGd/lucy3.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/D73FVrS/lucy4.jpg"   > </a>            
+              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/Jz0cgZK/lucy4.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/QM8gfgc/lucy5.jpg"   > </a>            
+              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/QM8gfgc/lucy5.jpg"   > </a> 
+                                                                                                                        <!-- CAMBIAR A HORIZONTAL -->         
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/r3vZr2c/lucy6.jpg"   > </a>            
+              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/mBMygHF/lucy6.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img class="foto" src="https://i.ibb.co/K0GdfrQ/lucy7.jpg"   > </a>
+              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img class="foto" src="https://i.ibb.co/S5Y0xmf/lucy7.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img class="foto" src="https://i.ibb.co/8zh6GKr/lucy8.jpg"   > </a>
+              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img class="foto" src="https://i.ibb.co/Y3mRgS2/lucy8.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img class="foto" src="https://i.ibb.co/vxK9g38/lucy-caratula.jpg"   > </a>
+              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img class="foto" src="https://i.ibb.co/S5h424Z/lucy-caratula.jpg"   > </a>
             </div>
           </div>
    
@@ -118,7 +119,7 @@
     <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage1">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/3kX8CqT/lucy1.jpg">
+          <img src="https://i.ibb.co/FHmMSSd/lucy1.jpg">
         </div>
       </div>
     </div>
@@ -126,7 +127,7 @@
     <div tabindex="-1" aria-labelledby="modalImage2" aria-hidden="true" class="modal fade" id="modalImage2">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/0t5ymmC/lucy2.jpg">
+          <img src="https://i.ibb.co/CMwDQmv/lucy2.jpg">
         </div>
       </div>
     </div>
@@ -134,7 +135,7 @@
     <div tabindex="-1" aria-labelledby="modalImage3" aria-hidden="true" class="modal fade" id="modalImage3">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/Sm3G0cf/lucy3.jpg">
+          <img src="https://i.ibb.co/9bJhVGd/lucy3.jpg">
         </div>
       </div>
     </div>
@@ -142,7 +143,7 @@
     <div tabindex="-1" aria-labelledby="modalImage4" aria-hidden="true" class="modal fade" id="modalImage4">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/D73FVrS/lucy4.jpg">
+          <img src="https://i.ibb.co/5WQ2MH2/lucy4vertical.jpg">
         </div>
       </div>
     </div>
@@ -150,7 +151,7 @@
     <div tabindex="-1" aria-labelledby="modalImage5" aria-hidden="true" class="modal fade" id="modalImage5">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/QM8gfgc/lucy5.jpg">
+          <img src="https://i.ibb.co/BqrssMp/lucy5vertical.jpg">
         </div>
       </div>
     </div>
@@ -158,7 +159,7 @@
     <div tabindex="-1" aria-labelledby="modalImage6" aria-hidden="true" class="modal fade" id="modalImage6">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/r3vZr2c/lucy6.jpg">
+          <img src="https://i.ibb.co/mBMygHF/lucy6.jpg">
         </div>
       </div>
     </div>
@@ -166,7 +167,7 @@
     <div tabindex="-1" aria-labelledby="modalImage7" aria-hidden="true" class="modal fade" id="modalImage7">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/K0GdfrQ/lucy7.jpg">
+            <img src="https://i.ibb.co/S5Y0xmf/lucy7.jpg">
           </div>
         </div>
       </div>
@@ -174,7 +175,7 @@
       <div tabindex="-1" aria-labelledby="modalImage8" aria-hidden="true" class="modal fade" id="modalImage8">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/8zh6GKr/lucy8.jpg">
+            <img src="https://i.ibb.co/Y3mRgS2/lucy8.jpg">
           </div>
         </div>
       </div>
@@ -182,7 +183,7 @@
       <div tabindex="-1" aria-labelledby="modalImage9" aria-hidden="true" class="modal fade" id="modalImage9">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/vxK9g38/lucy-caratula.jpg">
+            <img src="https://i.ibb.co/S5h424Z/lucy-caratula.jpg">
           </div>
         </div>
       </div>
