--- a/secciones/portfolio/teatro/palabras/index.html
+++ b/secciones/portfolio/teatro/palabras/index.html
@@ -67,42 +67,42 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/wp0cFSy/palabras1.jpg"   > </a>
+              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/kqwGszw/palabras1.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/28jdSrq/palabras2.jpg"   > </a>
+              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/4ZYQWV6/palabras2.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/Q8D34yb/palabras3.jpg"   > </a>
+              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/bJF8971/palabras3.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/c8bwFXq/palabras4.jpg"   > </a>            
+              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/P4JFwW5/palabras4vertical.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/j6KqDzF/palabras5.jpg"   > </a>            
+              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/pbSPFyN/palabras5.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/thsDWYp/palabras6.jpg"   > </a>            
+              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/0Yz5pNr/palabras6.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img class="foto" src="https://i.ibb.co/9pzM4Rc/palabras7.jpg"   > </a>
+              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img class="foto" src="https://i.ibb.co/k1TJTqh/palabras7.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img class="foto" src="https://i.ibb.co/R3JcWsD/palabras-caratula.jpg"   > </a>
+              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img class="foto" src="https://i.ibb.co/M8x2nkF/palabras-caratula.jpg"   > </a>
             </div>
           </div>
          
@@ -113,7 +113,7 @@
     <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage1">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/wp0cFSy/palabras1.jpg">
+          <img src="https://i.ibb.co/kqwGszw/palabras1.jpg">
         </div>
       </div>
     </div>
@@ -121,7 +121,7 @@
     <div tabindex="-1" aria-labelledby="modalImage2" aria-hidden="true" class="modal fade" id="modalImage2">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/28jdSrq/palabras2.jpg">
+          <img src="https://i.ibb.co/4ZYQWV6/palabras2.jpg">
         </div>
       </div>
     </div>
@@ -129,7 +129,7 @@
     <div tabindex="-1" aria-labelledby="modalImage3" aria-hidden="true" class="modal fade" id="modalImage3">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/Q8D34yb/palabras3.jpg">
+          <img src="https://i.ibb.co/bJF8971/palabras3.jpg">
         </div>
       </div>
     </div>
@@ -137,7 +137,7 @@
     <div tabindex="-1" aria-labelledby="modalImage4" aria-hidden="true" class="modal fade" id="modalImage4">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/c8bwFXq/palabras4.jpg">
+          <img src="https://i.ibb.co/7j4XP58/palabras4.jpg">
         </div>
       </div>
     </div>
@@ -145,7 +145,7 @@
     <div tabindex="-1" aria-labelledby="modalImage5" aria-hidden="true" class="modal fade" id="modalImage5">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/j6KqDzF/palabras5.jpg">
+          <img src="https://i.ibb.co/pbSPFyN/palabras5.jpg">
         </div>
       </div>
     </div>
@@ -153,7 +153,7 @@
     <div tabindex="-1" aria-labelledby="modalImage6" aria-hidden="true" class="modal fade" id="modalImage6">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/thsDWYp/palabras6.jpg">
+          <img src="https://i.ibb.co/0Yz5pNr/palabras6.jpg">
         </div>
       </div>
     </div>
@@ -161,7 +161,7 @@
     <div tabindex="-1" aria-labelledby="modalImage7" aria-hidden="true" class="modal fade" id="modalImage7">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/9pzM4Rc/palabras7.jpg">
+            <img src="https://i.ibb.co/k1TJTqh/palabras7.jpg">
           </div>
         </div>
       </div>
@@ -169,7 +169,7 @@
       <div tabindex="-1" aria-labelledby="modalImage8" aria-hidden="true" class="modal fade" id="modalImage8">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/R3JcWsD/palabras-caratula.jpg">
+            <img src="https://i.ibb.co/M8x2nkF/palabras-caratula.jpg">
           </div>
         </div>
       </div>
