--- a/secciones/portfolio/teatro/premortem/index.html
+++ b/secciones/portfolio/teatro/premortem/index.html
@@ -67,57 +67,57 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/680Nw0v/premortem1.jpg"   > </a>
+              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/drwthZY/premortem1.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/TrTRPvH/premortem2.jpg"   > </a>
+              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/pWzXFjP/premortem2.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/kJZnqw0/premortem3.jpg"   > </a>
+              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/9bt15WS/premortem3.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/ftD7w2N/premortem4.jpg"   > </a>            
+              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/hXD7Z4y/premortem4.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/NNR9cxz/premortem5.jpg"   > </a>            
+              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/QMtchY3/premortem5.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/hf2FyqG/premortem6.jpg"   > </a>            
+              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/gv6NxQ2/premortem6.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img class="foto" src="https://i.ibb.co/tsZJTYt/premortem7.jpg"   > </a>
+              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img class="foto" src="https://i.ibb.co/xqCHFbR/premortem7.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img class="foto" src="https://i.ibb.co/N6Z71C9/premortem8.jpg"   > </a>
+              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img class="foto" src="https://i.ibb.co/w7vSgGn/premortem8.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img class="foto" src="https://i.ibb.co/GcCSfX6/premortem9.jpg"   > </a>
+              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img class="foto" src="https://i.ibb.co/mCZ4W5q/premortem9.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img class="foto" src="https://i.ibb.co/jw4v9Qb/premortem10.jpg"   > </a>            
+              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img class="foto" src="https://i.ibb.co/X7Lzf5g/premortem10.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img class="foto" src="https://i.ibb.co/tstGV3M/premortem-caratula.jpg"   > </a>            
+              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img class="foto" src="https://i.ibb.co/3T9TDyy/premortem-caratula.jpg"   > </a>            
             </div>
           </div>
          
@@ -128,7 +128,7 @@
     <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage1">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/680Nw0v/premortem1.jpg">
+          <img src="https://i.ibb.co/3hPThD2/premortem1vertical.jpg">
         </div>
       </div>
     </div>
@@ -136,7 +136,7 @@
     <div tabindex="-1" aria-labelledby="modalImage2" aria-hidden="true" class="modal fade" id="modalImage2">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/TrTRPvH/premortem2.jpg">
+          <img src="https://i.ibb.co/KFGjkTN/premortem2vertical.jpg">
         </div>
       </div>
     </div>
@@ -144,7 +144,7 @@
     <div tabindex="-1" aria-labelledby="modalImage3" aria-hidden="true" class="modal fade" id="modalImage3">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/kJZnqw0/premortem3.jpg">
+          <img src="https://i.ibb.co/Nn0GRzg/premortem3vertical.jpg">
         </div>
       </div>
     </div>
@@ -152,7 +152,7 @@
     <div tabindex="-1" aria-labelledby="modalImage4" aria-hidden="true" class="modal fade" id="modalImage4">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/ftD7w2N/premortem4.jpg">
+          <img src="https://i.ibb.co/23ZzGn5/premortem4vertical.jpg">
         </div>
       </div>
     </div>
@@ -160,7 +160,7 @@
     <div tabindex="-1" aria-labelledby="modalImage5" aria-hidden="true" class="modal fade" id="modalImage5">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/NNR9cxz/premortem5.jpg">
+          <img src="https://i.ibb.co/QMtchY3/premortem5.jpg">
         </div>
       </div>
     </div>
@@ -168,7 +168,7 @@
     <div tabindex="-1" aria-labelledby="modalImage6" aria-hidden="true" class="modal fade" id="modalImage6">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/hf2FyqG/premortem6.jpg">
+          <img src="https://i.ibb.co/gv6NxQ2/premortem6.jpg">
         </div>
       </div>
     </div>
@@ -176,7 +176,7 @@
     <div tabindex="-1" aria-labelledby="modalImage7" aria-hidden="true" class="modal fade" id="modalImage7">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/tsZJTYt/premortem7.jpg">
+            <img src="https://i.ibb.co/xqCHFbR/premortem7.jpg">
           </div>
         </div>
       </div>
@@ -184,7 +184,7 @@
       <div tabindex="-1" aria-labelledby="modalImage8" aria-hidden="true" class="modal fade" id="modalImage8">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/N6Z71C9/premortem8.jpg">
+            <img src="https://i.ibb.co/w7vSgGn/premortem8.jpg">
           </div>
         </div>
       </div>
@@ -192,7 +192,7 @@
       <div tabindex="-1" aria-labelledby="modalImage9" aria-hidden="true" class="modal fade" id="modalImage9">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/GcCSfX6/premortem9.jpg">
+            <img src="https://i.ibb.co/mCZ4W5q/premortem9.jpg">
           </div>
         </div>
       </div>
@@ -200,7 +200,7 @@
       <div tabindex="-1" aria-labelledby="modalImage10" aria-hidden="true" class="modal fade" id="modalImage10">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/jw4v9Qb/premortem10.jpg">
+            <img src="https://i.ibb.co/X7Lzf5g/premortem10.jpg">
           </div>
         </div>
       </div>
@@ -208,7 +208,7 @@
       <div tabindex="-1" aria-labelledby="modalImage11" aria-hidden="true" class="modal fade" id="modalImage11">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/tstGV3M/premortem-caratula.jpg">
+            <img src="https://i.ibb.co/3T9TDyy/premortem-caratula.jpg">
           </div>
         </div>
       </div>
