--- a/secciones/portfolio/documental/index.html
+++ b/secciones/portfolio/documental/index.html
@@ -81,82 +81,82 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/3z9FQqj/documental1.jpg" > </a>
+              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/Q8QkK83/documental1.jpg" > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/kgz8GvJ/documental2.jpg" > </a>
+              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/6190F3X/documental2.jpg" > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/BVzPHJY/documental3.jpg" > </a>
+              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/zbtqMwy/documental3.jpg" > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/FqwNj6w/documental4.jpg" > </a>            
+              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/5hRCkR7/documental4.jpg" > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/JdhJrkC/documental5.jpg" > </a>            
+              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/GRMzL76/documental5.jpg" > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/9bBQ0ZV/documental6.jpg" > </a>            
+              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/Nn4TW9Q/documental6.jpg" > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img class="foto" src="https://i.ibb.co/w7WRBsW/documental7.jpg" > </a>            
+              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img class="foto" src="https://i.ibb.co/k8fY25Z/documental7.jpg" > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img class="foto" src="https://i.ibb.co/VDDR5yX/documental8.jpg" > </a>            
+              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img class="foto" src="https://i.ibb.co/hYD6Vyd/documental8.jpg" > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img class="foto" src="https://i.ibb.co/PFF7GNh/documental9.jpg" > </a>            
+              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img class="foto" src="https://i.ibb.co/LvSC1kv/documental9.jpg" > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6"> <!-- CAMBIAR TAMAÑO DE IMAGEN 10-->
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img class="foto" src="https://i.ibb.co/Rz3qZ46/documental10.jpg" > </a>            
+              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img class="foto" src="https://i.ibb.co/3f94Tkh/documental10.jpg" > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img class="foto" src="https://i.ibb.co/d7sTZHM/documental11.jpg"> </a>            
+              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img class="foto" src="https://i.ibb.co/VYbDQ4f/documental11.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img class="foto" src="https://i.ibb.co/sWXffjH/documental12.jpg"> </a>            
+              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img class="foto" src="https://i.ibb.co/kB1kQTt/documental12.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img class="foto" src="https://i.ibb.co/zHZyRx8/documental13.jpg"> </a>            
+              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img class="foto" src="https://i.ibb.co/RpRrvDD/documental13.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img class="foto" src="https://i.ibb.co/drXXj6x/documental14.jpg"> </a>            
+              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img class="foto" src="https://i.ibb.co/K2x24zm/documental14.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 15" data-bs-toggle="modal" data-bs-target="#modalImage15"><img class="foto" src="https://i.ibb.co/G3XC5GD/documental15.jpg"> </a>            
+              <a href="#" title="Image 15" data-bs-toggle="modal" data-bs-target="#modalImage15"><img class="foto" src="https://i.ibb.co/XtFRnWb/documental15.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 16" data-bs-toggle="modal" data-bs-target="#modalImage16"><img class="foto" src="https://i.ibb.co/0VbDGLx/DSC-0232-jpg-FOTO-DE-CARATULA.jpg"> </a>            
+              <a href="#" title="Image 16" data-bs-toggle="modal" data-bs-target="#modalImage16"><img class="foto" src="https://i.ibb.co/n1sDZWr/documental-caratula.jpg"> </a>            
             </div>
           </div>
   
@@ -167,7 +167,7 @@
     <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage1">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/3z9FQqj/documental1.jpg">
+          <img src="https://i.ibb.co/Q8QkK83/documental1.jpg">
         </div>
       </div>
     </div>
@@ -175,7 +175,7 @@
     <div tabindex="-1" aria-labelledby="modalImage2" aria-hidden="true" class="modal fade" id="modalImage2">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/kgz8GvJ/documental2.jpg">
+          <img src="https://i.ibb.co/6190F3X/documental2.jpg">
         </div>
       </div>
     </div>
@@ -183,7 +183,7 @@
     <div tabindex="-1" aria-labelledby="modalImage3" aria-hidden="true" class="modal fade" id="modalImage3">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/BVzPHJY/documental3.jpg">
+          <img src="https://i.ibb.co/zbtqMwy/documental3.jpg">
         </div>
       </div>
     </div>
@@ -191,7 +191,7 @@
     <div tabindex="-1" aria-labelledby="modalImage4" aria-hidden="true" class="modal fade" id="modalImage4">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/FqwNj6w/documental4.jpg">
+          <img src="https://i.ibb.co/5hRCkR7/documental4.jpg">
         </div>
       </div>
     </div>
@@ -199,7 +199,7 @@
     <div tabindex="-1" aria-labelledby="modalImage5" aria-hidden="true" class="modal fade" id="modalImage5">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/JdhJrkC/documental5.jpg">
+          <img src="https://i.ibb.co/GRMzL76/documental5.jpg">
         </div>
       </div>
     </div>
@@ -207,7 +207,7 @@
     <div tabindex="-1" aria-labelledby="modalImage6" aria-hidden="true" class="modal fade" id="modalImage6">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/9bBQ0ZV/documental6.jpg">
+          <img src="https://i.ibb.co/Nn4TW9Q/documental6.jpg">
         </div>
       </div>
     </div>
@@ -215,7 +215,7 @@
     <div tabindex="-1" aria-labelledby="modalImage7" aria-hidden="true" class="modal fade" id="modalImage7">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/w7WRBsW/documental7.jpg">
+          <img src="https://i.ibb.co/k8fY25Z/documental7.jpg">
         </div>
       </div>
     </div>
@@ -223,7 +223,7 @@
     <div tabindex="-1" aria-labelledby="modalImage8" aria-hidden="true" class="modal fade" id="modalImage8">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/VDDR5yX/documental8.jpg">
+          <img src="https://i.ibb.co/hYD6Vyd/documental8.jpg">
         </div>
       </div>
     </div>
@@ -231,7 +231,7 @@
     <div tabindex="-1" aria-labelledby="modalImage9" aria-hidden="true" class="modal fade" id="modalImage9">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/PFF7GNh/documental9.jpg">
+          <img src="https://i.ibb.co/LvSC1kv/documental9.jpg">
         </div>
       </div>
     </div>
@@ -239,7 +239,7 @@
     <div tabindex="-1" aria-labelledby="modalImage10" aria-hidden="true" class="modal fade" id="modalImage10">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/Rz3qZ46/documental10.jpg">
+          <img src="https://i.ibb.co/3f94Tkh/documental10.jpg">
         </div>
       </div>
     </div>
@@ -247,7 +247,7 @@
     <div tabindex="-1" aria-labelledby="modalImage11" aria-hidden="true" class="modal fade" id="modalImage11">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/d7sTZHM/documental11.jpg">
+          <img src="https://i.ibb.co/ws3PbpB/documental11vertical.jpg">
         </div>
       </div>
     </div>
@@ -255,7 +255,7 @@
     <div tabindex="-1" aria-labelledby="modalImage12" aria-hidden="true" class="modal fade" id="modalImage12">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/sWXffjH/documental12.jpg">
+          <img src="https://i.ibb.co/kB1kQTt/documental12.jpg">
         </div>
       </div>
     </div>
@@ -263,7 +263,7 @@
     <div tabindex="-1" aria-labelledby="modalImage13" aria-hidden="true" class="modal fade" id="modalImage13">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/zHZyRx8/documental13.jpg">
+          <img src="https://i.ibb.co/RpRrvDD/documental13.jpg">
         </div>
       </div>
     </div>
@@ -271,7 +271,7 @@
     <div tabindex="-1" aria-labelledby="modalImage14" aria-hidden="true" class="modal fade" id="modalImage14">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/drXXj6x/documental14.jpg">
+          <img src="https://i.ibb.co/K2x24zm/documental14.jpg">
         </div>
       </div>
     </div>
@@ -279,7 +279,7 @@
     <div tabindex="-1" aria-labelledby="modalImage15" aria-hidden="true" class="modal fade" id="modalImage15">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/zRyqCCM/documental15.jpg">
+          <img src="https://i.ibb.co/XtFRnWb/documental15.jpg">
         </div>
       </div>
     </div>
@@ -287,7 +287,7 @@
     <div tabindex="-1" aria-labelledby="modalImage16" aria-hidden="true" class="modal fade" id="modalImage16">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/0VbDGLx/DSC-0232-jpg-FOTO-DE-CARATULA.jpg">
+          <img src="https://i.ibb.co/n1sDZWr/documental-caratula.jpg">
         </div>
       </div>
     </div>
