--- a/secciones/portfolio/teatro/canta/index.html
+++ b/secciones/portfolio/teatro/canta/index.html
@@ -66,72 +66,72 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/cwwvhtG/canta1.jpg"   > </a>
+              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/3RCMZPX/canta1.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/7vj2N7H/canta2.jpg"   > </a>
+              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/KGcsfCT/canta2.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/0GYtLcW/canta3.jpg"   > </a>
+              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/fXXZ1b8/canta3.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/w09TMWt/canta4.jpg"   > </a>            
+              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/rMkvQX8/canta4.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/GV7QqNx/canta5.jpg"   > </a>            
+              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/v4Q67B0/canta5.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/Z2L0VZ5/canta6.jpg"   > </a>            
+              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/m4hdkwB/canta6.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img class="foto" src="https://i.ibb.co/YkHLLRb/canta7.jpg"   > </a>
+              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img class="foto" src="https://i.ibb.co/cNyjwVh/canta7.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img class="foto" src="https://i.ibb.co/nRc3WV8/canta8.jpg"   > </a>
+              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img class="foto" src="https://i.ibb.co/rM3M7zn/canta8.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img class="foto" src="https://i.ibb.co/t21BCsq/canta9.jpg"   > </a>
+              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img class="foto" src="https://i.ibb.co/NTGcfYb/canta9.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img class="foto" src="https://i.ibb.co/YywssXc/canta10.jpg"   > </a>            
+              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img class="foto" src="https://i.ibb.co/3zT5H3X/canta10.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img class="foto" src="https://i.ibb.co/3dgz20T/canta11.jpg"   > </a>            
+              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img class="foto" src="https://i.ibb.co/9W3f82f/canta11.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img class="foto" src="https://i.ibb.co/J7CzLxj/canta12.jpg"   > </a>            
+              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img class="foto" src="https://i.ibb.co/FgChDVZ/canta12.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img class="foto" src="https://i.ibb.co/kQRXq0s/canta13.jpg"   > </a>
+              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img class="foto" src="https://i.ibb.co/xsFKt3w/canta13.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img class="foto" src="https://i.ibb.co/wsgcSXF/canta-caratula.jpg"   > </a>
+              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img class="foto" src="https://i.ibb.co/4gbtz0N/canta-caratula.jpg"   > </a>
             </div>
           </div>
           
@@ -143,7 +143,7 @@
     <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage1">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/cwwvhtG/canta1.jpg">
+          <img src="https://i.ibb.co/6yjrvSK/canta1vertical.jpg">
         </div>
       </div>
     </div>
@@ -151,7 +151,7 @@
     <div tabindex="-1" aria-labelledby="modalImage2" aria-hidden="true" class="modal fade" id="modalImage2">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/7vj2N7H/canta2.jpg">
+          <img src="https://i.ibb.co/KGcsfCT/canta2.jpg">
         </div>
       </div>
     </div>
@@ -159,7 +159,7 @@
     <div tabindex="-1" aria-labelledby="modalImage3" aria-hidden="true" class="modal fade" id="modalImage3">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/0GYtLcW/canta3.jpg">
+          <img src="https://i.ibb.co/XZVCvR8/canta3vertical.jpg">
         </div>
       </div>
     </div>
@@ -167,7 +167,7 @@
     <div tabindex="-1" aria-labelledby="modalImage4" aria-hidden="true" class="modal fade" id="modalImage4">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/w09TMWt/canta4.jpg">
+          <img src="https://i.ibb.co/rMkvQX8/canta4.jpg">
         </div>
       </div>
     </div>
@@ -175,7 +175,7 @@
     <div tabindex="-1" aria-labelledby="modalImage5" aria-hidden="true" class="modal fade" id="modalImage5">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/GV7QqNx/canta5.jpg">
+          <img src="https://i.ibb.co/v4Q67B0/canta5.jpg">
         </div>
       </div>
     </div>
@@ -183,7 +183,7 @@
     <div tabindex="-1" aria-labelledby="modalImage6" aria-hidden="true" class="modal fade" id="modalImage6">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/Z2L0VZ5/canta6.jpg">
+          <img src="https://i.ibb.co/m4hdkwB/canta6.jpg">
         </div>
       </div>
     </div>
@@ -191,7 +191,7 @@
     <div tabindex="-1" aria-labelledby="modalImage7" aria-hidden="true" class="modal fade" id="modalImage7">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/YkHLLRb/canta7.jpg">
+            <img src="https://i.ibb.co/XZfpvNp/canta7vertical.jpg">
           </div>
         </div>
       </div>
@@ -199,7 +199,7 @@
       <div tabindex="-1" aria-labelledby="modalImage8" aria-hidden="true" class="modal fade" id="modalImage8">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/nRc3WV8/canta8.jpg">
+            <img src="https://i.ibb.co/DzXkKqz/canta8vertical.jpg">
           </div>
         </div>
       </div>
@@ -207,7 +207,7 @@
       <div tabindex="-1" aria-labelledby="modalImage9" aria-hidden="true" class="modal fade" id="modalImage9">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/t21BCsq/canta9.jpg">
+            <img src="https://i.ibb.co/HDXGnPB/canta9vertical.jpg">
           </div>
         </div>
       </div>
@@ -215,7 +215,7 @@
       <div tabindex="-1" aria-labelledby="modalImage10" aria-hidden="true" class="modal fade" id="modalImage10">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/YywssXc/canta10.jpg">
+            <img src="https://i.ibb.co/3zT5H3X/canta10.jpg">
           </div>
         </div>
       </div>
@@ -223,7 +223,7 @@
       <div tabindex="-1" aria-labelledby="modalImage11" aria-hidden="true" class="modal fade" id="modalImage11">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/3dgz20T/canta11.jpg">
+            <img src="https://i.ibb.co/9W3f82f/canta11.jpg">
           </div>
         </div>
       </div>
@@ -231,7 +231,7 @@
       <div tabindex="-1" aria-labelledby="modalImage12" aria-hidden="true" class="modal fade" id="modalImage12">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/J7CzLxj/canta12.jpg">
+            <img src="https://i.ibb.co/FgChDVZ/canta12.jpg">
           </div>
         </div>
       </div>
@@ -239,7 +239,7 @@
       <div tabindex="-1" aria-labelledby="modalImage13" aria-hidden="true" class="modal fade" id="modalImage13">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/kQRXq0s/canta13.jpg">
+            <img src="https://i.ibb.co/xsFKt3w/canta13.jpg">
           </div>
         </div>
       </div>
@@ -247,7 +247,7 @@
       <div tabindex="-1" aria-labelledby="modalImage14" aria-hidden="true" class="modal fade" id="modalImage14">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/wsgcSXF/canta-caratula.jpg">
+            <img src="https://i.ibb.co/4gbtz0N/canta-caratula.jpg">
           </div>
         </div>
       </div>
