--- a/secciones/portfolio/teatro/gala/index.html
+++ b/secciones/portfolio/teatro/gala/index.html
@@ -79,92 +79,92 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/SVd1tzh/gala1.jpg"   > </a>
+              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/f9FX5gL/gala1.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/RTBrk8T/gala2.jpg"   > </a>
+              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/HY3cGv8/gala2.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/56zrXsn/gala3.jpg"   > </a>
+              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/R6WLf2Z/gala3.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/qsywhV4/gala4.jpg"   > </a>            
+              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/1XLKvY3/gala4.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/rFcTkSh/gala5.jpg"   > </a>            
+              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/4TBK46z/gala5.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/ZBP7HhQ/gala6.jpg"   > </a>            
+              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/sRfx2Rg/gala6.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img class="foto" src="https://i.ibb.co/h2VXRkf/gala7.jpg"   > </a>
+              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img class="foto" src="https://i.ibb.co/HVGjhQW/gala7.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img class="foto" src="https://i.ibb.co/mBqWG2F/gala8.jpg"   > </a>
+              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img class="foto" src="https://i.ibb.co/K0N9BWS/gala8.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img class="foto" src="https://i.ibb.co/V9WZgJq/gala9.jpg"   > </a>
+              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img class="foto" src="https://i.ibb.co/5sW6qBF/gala9.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img class="foto" src="https://i.ibb.co/y6MYfLC/gala10.jpg"   > </a>            
+              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img class="foto" src="https://i.ibb.co/ZTS1G8D/gala10.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img class="foto" src="https://i.ibb.co/nwMFkv4/gala11.jpg"   > </a>            
+              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img class="foto" src="https://i.ibb.co/4MY8zYP/gala11.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img class="foto" src="https://i.ibb.co/XC2PHgQ/gala12.jpg"   > </a>            
+              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img class="foto" src="https://i.ibb.co/L1hfrhy/gala12.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img class="foto" src="https://i.ibb.co/PzCPmG6/gala13.jpg"   > </a>
+              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img class="foto" src="https://i.ibb.co/3yd7CSL/gala13.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img class="foto" src="https://i.ibb.co/PCn3Jfy/gala14.jpg"   > </a>
+              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img class="foto" src="https://i.ibb.co/dWRrSMH/gala14.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 15" data-bs-toggle="modal" data-bs-target="#modalImage15"><img class="foto" src="https://i.ibb.co/W5ckQ5Q/gala15.jpg"   > </a>            
+              <a href="#" title="Image 15" data-bs-toggle="modal" data-bs-target="#modalImage15"><img class="foto" src="https://i.ibb.co/Tk1qp9c/gala15.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 16" data-bs-toggle="modal" data-bs-target="#modalImage16"><img class="foto" src="https://i.ibb.co/W0PWsZq/gala16.jpg"   > </a>            
+              <a href="#" title="Image 16" data-bs-toggle="modal" data-bs-target="#modalImage16"><img class="foto" src="https://i.ibb.co/ZXWjwCV/gala16.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 17" data-bs-toggle="modal" data-bs-target="#modalImage17"><img class="foto" src="https://i.ibb.co/VS6XX1j/gala17.jpg"   > </a>
+              <a href="#" title="Image 17" data-bs-toggle="modal" data-bs-target="#modalImage17"><img class="foto" src="https://i.ibb.co/55bCVND/gala17.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 18" data-bs-toggle="modal" data-bs-target="#modalImage18"><img class="foto" src="https://i.ibb.co/r3Cwc46/gala-caratula.jpg"   > </a>
+              <a href="#" title="Image 18" data-bs-toggle="modal" data-bs-target="#modalImage18"><img class="foto" src="https://i.ibb.co/xJtgB3N/gala-caratula.jpg"   > </a>
             </div>
           </div>
           
@@ -176,7 +176,7 @@
     <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage1">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/SVd1tzh/gala1.jpg">
+          <img src="https://i.ibb.co/R7sCdZM/gala1vertical.jpg">
         </div>
       </div>
     </div>
@@ -184,7 +184,7 @@
     <div tabindex="-1" aria-labelledby="modalImage2" aria-hidden="true" class="modal fade" id="modalImage2">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/RTBrk8T/gala2.jpg">
+          <img src="https://i.ibb.co/M5wBrW5/gala2vertical.jpg">
         </div>
       </div>
     </div>
@@ -192,7 +192,7 @@
     <div tabindex="-1" aria-labelledby="modalImage3" aria-hidden="true" class="modal fade" id="modalImage3">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/56zrXsn/gala3.jpg">
+          <img src="https://i.ibb.co/37MgzNq/gala3vertical.jpg">
         </div>
       </div>
     </div>
@@ -200,7 +200,7 @@
     <div tabindex="-1" aria-labelledby="modalImage4" aria-hidden="true" class="modal fade" id="modalImage4">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/qsywhV4/gala4.jpg">
+          <img src="https://i.ibb.co/8bpnsLV/gala4vertical.jpg">
         </div>
       </div>
     </div>
@@ -208,7 +208,7 @@
     <div tabindex="-1" aria-labelledby="modalImage5" aria-hidden="true" class="modal fade" id="modalImage5">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/rFcTkSh/gala5.jpg">
+          <img src="https://i.ibb.co/4TBK46z/gala5.jpg">
         </div>
       </div>
     </div>
@@ -216,7 +216,7 @@
     <div tabindex="-1" aria-labelledby="modalImage6" aria-hidden="true" class="modal fade" id="modalImage6">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/ZBP7HhQ/gala6.jpg">
+          <img src="https://i.ibb.co/sRfx2Rg/gala6.jpg">
         </div>
       </div>
     </div>
@@ -224,7 +224,7 @@
     <div tabindex="-1" aria-labelledby="modalImage7" aria-hidden="true" class="modal fade" id="modalImage7">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/h2VXRkf/gala7.jpg">
+            <img src="https://i.ibb.co/HVGjhQW/gala7.jpg">
           </div>
         </div>
       </div>
@@ -232,7 +232,7 @@
       <div tabindex="-1" aria-labelledby="modalImage8" aria-hidden="true" class="modal fade" id="modalImage8">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/mBqWG2F/gala8.jpg">
+            <img src="https://i.ibb.co/K0N9BWS/gala8.jpg">
           </div>
         </div>
       </div>
@@ -240,7 +240,7 @@
       <div tabindex="-1" aria-labelledby="modalImage9" aria-hidden="true" class="modal fade" id="modalImage9">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/V9WZgJq/gala9.jpg">
+            <img src="https://i.ibb.co/5sW6qBF/gala9.jpg">
           </div>
         </div>
       </div>
@@ -248,7 +248,7 @@
       <div tabindex="-1" aria-labelledby="modalImage10" aria-hidden="true" class="modal fade" id="modalImage10">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/y6MYfLC/gala10.jpg">
+            <img src="https://i.ibb.co/ZTS1G8D/gala10.jpg">
           </div>
         </div>
       </div>
@@ -256,7 +256,7 @@
       <div tabindex="-1" aria-labelledby="modalImage11" aria-hidden="true" class="modal fade" id="modalImage11">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/nwMFkv4/gala11.jpg">
+            <img src="https://i.ibb.co/4MY8zYP/gala11.jpg">
           </div>
         </div>
       </div>
@@ -264,7 +264,7 @@
       <div tabindex="-1" aria-labelledby="modalImage12" aria-hidden="true" class="modal fade" id="modalImage12">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/XC2PHgQ/gala12.jpg">
+            <img src="https://i.ibb.co/L1hfrhy/gala12.jpg">
           </div>
         </div>
       </div>
@@ -272,7 +272,7 @@
       <div tabindex="-1" aria-labelledby="modalImage13" aria-hidden="true" class="modal fade" id="modalImage13">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/PzCPmG6/gala13.jpg">
+            <img src="https://i.ibb.co/3yd7CSL/gala13.jpg">
           </div>
         </div>
       </div>
@@ -280,7 +280,7 @@
       <div tabindex="-1" aria-labelledby="modalImage14" aria-hidden="true" class="modal fade" id="modalImage14">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/PCn3Jfy/gala14.jpg">
+            <img src="https://i.ibb.co/dWRrSMH/gala14.jpg">
           </div>
         </div>
       </div>
@@ -288,7 +288,7 @@
       <div tabindex="-1" aria-labelledby="modalImage15" aria-hidden="true" class="modal fade" id="modalImage15">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/W5ckQ5Q/gala15.jpg">
+            <img src="https://i.ibb.co/Tk1qp9c/gala15.jpg"">
           </div>
         </div>
       </div>
@@ -296,7 +296,7 @@
       <div tabindex="-1" aria-labelledby="modalImage16" aria-hidden="true" class="modal fade" id="modalImage16">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/W0PWsZq/gala16.jpg">
+            <img src="https://i.ibb.co/ZXWjwCV/gala16.jpg">
           </div>
         </div>
       </div>
@@ -304,7 +304,7 @@
       <div tabindex="-1" aria-labelledby="modalImage17" aria-hidden="true" class="modal fade" id="modalImage17">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/VS6XX1j/gala17.jpg">
+            <img src="https://i.ibb.co/55bCVND/gala17.jpg">
           </div>
         </div>
       </div>
@@ -312,7 +312,7 @@
       <div tabindex="-1" aria-labelledby="modalImage18" aria-hidden="true" class="modal fade" id="modalImage18">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/r3Cwc46/gala-caratula.jpg">
+            <img src="https://i.ibb.co/xJtgB3N/gala-caratula.jpg">
           </div>
         </div>
       </div>
