--- a/secciones/portfolio/teatro/partida/index.html
+++ b/secciones/portfolio/teatro/partida/index.html
@@ -67,72 +67,72 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/PwDHqrH/partida1.jpg"   > </a>
+              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/f1YtBtp/partida1.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/nw1cTQX/partida2.jpg"   > </a>
+              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/z7NKZB9/partida2.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/FH5FDmB/partida3.jpg"   > </a>
+              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/wr5q0XR/partida3.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/m4RHH2k/partida4.jpg"   > </a>            
+              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/SwNYPDD/partida4.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/yf9ywsY/partida5.jpg"   > </a>            
+              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/DMhrKjH/partida5.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/Jj2vByP/partida6.jpg"   > </a>            
+              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/fdt5qQF/partida6.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img class="foto" src="https://i.ibb.co/J5kNWJ4/partida7.jpg"   > </a>
+              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img class="foto" src="https://i.ibb.co/9yfj84k/partida7.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img class="foto" src="https://i.ibb.co/8m8t3Jg/partida8.jpg"   > </a>
+              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img class="foto" src="https://i.ibb.co/xCzGhnh/partida8.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img class="foto" src="https://i.ibb.co/8cp2Str/partida9.jpg"   > </a>
+              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img class="foto" src="https://i.ibb.co/g3w4yPQ/partida9.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img class="foto" src="https://i.ibb.co/gZ7Hfrs/partida10.jpg"   > </a>            
+              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img class="foto" src="https://i.ibb.co/yhzz74b/partida10.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img class="foto" src="https://i.ibb.co/1dSP5fJ/partida11.jpg"   > </a>            
+              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img class="foto" src="https://i.ibb.co/JzJYnYj/partida11.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img class="foto" src="https://i.ibb.co/37Qfjgf/partida12.jpg"   > </a>            
+              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img class="foto" src="https://i.ibb.co/jHbyJ9s/partida12.jpg"   > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img class="foto" src="https://i.ibb.co/5j0CCr8/partida13.jpg"   > </a>
+              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img class="foto" src="https://i.ibb.co/yFLrKRK/partida13.jpg"   > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img class="foto" src="https://i.ibb.co/2Nc5W0Q/partida-caratula.jpg"   > </a>
+              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img class="foto" src="https://i.ibb.co/F61VvWf/CARATULA-GALERIA-IPH-0446.jpg"   > </a>
             </div>
           </div>
           
@@ -144,7 +144,7 @@
     <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage1">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/PwDHqrH/partida1.jpg">
+          <img src="https://i.ibb.co/f1YtBtp/partida1.jpg">
         </div>
       </div>
     </div>
@@ -152,7 +152,7 @@
     <div tabindex="-1" aria-labelledby="modalImage2" aria-hidden="true" class="modal fade" id="modalImage2">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/nw1cTQX/partida2.jpg">
+          <img src="https://i.ibb.co/z7NKZB9/partida2.jpg">
         </div>
       </div>
     </div>
@@ -160,7 +160,7 @@
     <div tabindex="-1" aria-labelledby="modalImage3" aria-hidden="true" class="modal fade" id="modalImage3">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/FH5FDmB/partida3.jpg">
+          <img src="https://i.ibb.co/wr5q0XR/partida3.jpg">
         </div>
       </div>
     </div>
@@ -168,7 +168,7 @@
     <div tabindex="-1" aria-labelledby="modalImage4" aria-hidden="true" class="modal fade" id="modalImage4">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/m4RHH2k/partida4.jpg">
+          <img src="https://i.ibb.co/SwNYPDD/partida4.jpg">
         </div>
       </div>
     </div>
@@ -176,7 +176,7 @@
     <div tabindex="-1" aria-labelledby="modalImage5" aria-hidden="true" class="modal fade" id="modalImage5">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/yf9ywsY/partida5.jpg">
+          <img src="https://i.ibb.co/DMhrKjH/partida5.jpg">
         </div>
       </div>
     </div>
@@ -184,7 +184,7 @@
     <div tabindex="-1" aria-labelledby="modalImage6" aria-hidden="true" class="modal fade" id="modalImage6">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/Jj2vByP/partida6.jpg">
+          <img src="https://i.ibb.co/fdt5qQF/partida6.jpg">
         </div>
       </div>
     </div>
@@ -192,7 +192,7 @@
     <div tabindex="-1" aria-labelledby="modalImage7" aria-hidden="true" class="modal fade" id="modalImage7">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/J5kNWJ4/partida7.jpg">
+            <img src="https://i.ibb.co/9yfj84k/partida7.jpg">
           </div>
         </div>
       </div>
@@ -200,7 +200,7 @@
       <div tabindex="-1" aria-labelledby="modalImage8" aria-hidden="true" class="modal fade" id="modalImage8">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/8m8t3Jg/partida8.jpg">
+            <img src="https://i.ibb.co/xCzGhnh/partida8.jpg">
           </div>
         </div>
       </div>
@@ -208,7 +208,7 @@
       <div tabindex="-1" aria-labelledby="modalImage9" aria-hidden="true" class="modal fade" id="modalImage9">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/8cp2Str/partida9.jpg">
+            <img src="https://i.ibb.co/g3w4yPQ/partida9.jpg">
           </div>
         </div>
       </div>
@@ -216,7 +216,7 @@
       <div tabindex="-1" aria-labelledby="modalImage10" aria-hidden="true" class="modal fade" id="modalImage10">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/gZ7Hfrs/partida10.jpg">
+            <img src="https://i.ibb.co/yhzz74b/partida10.jpg">
           </div>
         </div>
       </div>
@@ -224,7 +224,7 @@
       <div tabindex="-1" aria-labelledby="modalImage11" aria-hidden="true" class="modal fade" id="modalImage11">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/1dSP5fJ/partida11.jpg">
+            <img src="https://i.ibb.co/JzJYnYj/partida11.jpg">
           </div>
         </div>
       </div>
@@ -232,7 +232,7 @@
       <div tabindex="-1" aria-labelledby="modalImage12" aria-hidden="true" class="modal fade" id="modalImage12">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/37Qfjgf/partida12.jpg">
+            <img src="https://i.ibb.co/jHbyJ9s/partida12.jpg">
           </div>
         </div>
       </div>
@@ -240,7 +240,7 @@
       <div tabindex="-1" aria-labelledby="modalImage13" aria-hidden="true" class="modal fade" id="modalImage13">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/5j0CCr8/partida13.jpg">
+            <img src="https://i.ibb.co/yFLrKRK/partida13.jpg">
           </div>
         </div>
       </div>
@@ -248,7 +248,7 @@
       <div tabindex="-1" aria-labelledby="modalImage14" aria-hidden="true" class="modal fade" id="modalImage14">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/2Nc5W0Q/partida-caratula.jpg">
+            <img src="https://i.ibb.co/F61VvWf/CARATULA-GALERIA-IPH-0446.jpg">
           </div>
         </div>
       </div>
